fix buggy board on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -27,13 +27,14 @@ h1 {
   border: solid black 1px;
 }
 
-#board button {
+#board .btn {
   height: 100px;
   width: 100px;
   background-color: white;
   border: solid black 1px;
   cursor: pointer;
   font-size: 50px;
+  padding: 0;
 }
 
 #board #a1 {
